// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs by default renders correctly 1`] = `
<div class="vnt-tabs">
  <ul class="vnt-tabs__navigation"></ul>
  <div class="vnt-tabs__container"></div>
</div>
`;

exports[`Tabs generates correct stucture renders correctly 1`] = `
<div class="vnt-tabs">
  <ul class="vnt-tabs__navigation">
    <li class="vnt-tabs__header vnt-tabs__header--active">Pivot Item 1</li>
    <li class="vnt-tabs__header">Pivot Item 2</li>
    <li class="vnt-tabs__header">Tab 3</li>
  </ul>
  <div class="vnt-tabs__container">
    <div class="vnt-tabs__tab vnt-tabs__tab--active">
      <div>Tab 1</div>
    </div>
    <div class="vnt-tabs__tab">
      <p>Tab 2</p>
    </div>
    <div class="vnt-tabs__tab">
      <p>Tab 3</p>
    </div>
  </div>
</div>
`;

exports[`Tabs once a tab is clicked renders correctly 1`] = `
<div class="vnt-tabs">
  <ul class="vnt-tabs__navigation">
    <li class="vnt-tabs__header">Pivot Item 1</li>
    <li class="vnt-tabs__header vnt-tabs__header--active">Pivot Item 2</li>
  </ul>
  <div class="vnt-tabs__container">
    <div class="vnt-tabs__tab">
      <p>Tab 1</p>
    </div>
    <div class="vnt-tabs__tab vnt-tabs__tab--active">
      <p>Tab 2</p>
    </div>
  </div>
</div>
`;
